--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="prefetch"
       href="https://fonts.googleapis.com/css?family=Lato:400,400i"
       as="font"
       type="font/woff2"
